--- a/README
+++ b/README
@@ -1,1 +1,19 @@
-This file was created by IntelliJ IDEA 12.1.3 for binding GitHub repository
+PongProcessingScala
+-
+Requirements
+-----------
+- Intellij IDEA or Community Edition
+- Scala Plugin
+
+The project already contains the Processing related files(core.jar...) and [Guava libraries] which are needed.
+
+Installation
+------------
+- Install Intellij + Scala Plugin (if it is not already installed)
+- Open Intellij -> Check out from Version Control -> GitHub -> Url: https://github.com/fxlex/PongProcessingScala.git -> Clone
+- Find file PongApplication in src -> right click -> run as PongApplication Main
+- Maybe you also have to  select "Use classpath from module".
+- You can also run it as an applet if you run Pong instead of PongApplication.
+
+[Guava libraries]:http://code.google.com/p/guava-libraries/
+ 
